--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KNSK - Ana Sayfa</title>
+    <title>KNSK - Hakkında</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -41,16 +41,16 @@
 </head>
 <body>
 <header>
-    <h1>Web Sitesi Başlığı</h1>
+    <h1>Hakkında</h1>
 </header>
 <nav>
     <a href="index.html">Ana Sayfa</a>
-    <a href="about.html">Hakkında</a>
-    <a href="communication.html">İletişim</a>
+    <a href="hakkinda.html">Hakkında</a>
+    <a href="iletisim.html">İletişim</a>
 </nav>
 <div class="container">
-    <h2>Hoş Geldiniz</h2>
-    <p>Bu bir örnek web sitesidir.</p>
+    <h2>Biz Kimiz?</h2>
+    <p>Bu sayfada şirketimiz hakkında bilgiler bulabilirsiniz.</p>
 </div>
 <footer>
     <p>&copy; 2024 Web Sitesi. Tüm Hakları Saklıdır.</p>
