--- a/about.html
+++ b/about.html
@@ -45,8 +45,8 @@
 </header>
 <nav>
     <a href="index.html">Ana Sayfa</a>
-    <a href="hakkinda.html">Hakkında</a>
-    <a href="iletisim.html">İletişim</a>
+    <a href="about.html">Hakkında</a>
+    <a href="contact.html">İletişim</a>
 </nav>
 <div class="container">
     <h2>Biz Kimiz?</h2>
