--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KNSK - İletişim</title>
+    <title>İletişim</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -45,12 +45,12 @@
 </header>
 <nav>
     <a href="index.html">Ana Sayfa</a>
-    <a href="hakkinda.html">Hakkında</a>
-    <a href="iletisim.html">İletişim</a>
+    <a href="about.html">Hakkında</a>
+    <a href="contact.html">İletişim</a>
 </nav>
 <div class="container">
     <h2>Bize Ulaşın</h2>
-    <p>İletişim bilgilerimiz burada yer alacaktır.</p>
+    <p>İletişim bilgileri burada yer alacaktır.</p>
 </div>
 <footer>
     <p>&copy; 2024 Web Sitesi. Tüm Hakları Saklıdır.</p>
