--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KNSK - Ana Sayfa</title>
+    <title>KNSK</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -46,7 +46,7 @@
 <nav>
     <a href="index.html">Ana Sayfa</a>
     <a href="about.html">Hakkında</a>
-    <a href="communication.html">İletişim</a>
+    <a href="contact.html">İletişim</a>
 </nav>
 <div class="container">
     <h2>Hoş Geldiniz</h2>
