--- a/index.html
+++ b/index.html
@@ -1,59 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KNSK</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
+            font-family: "Times New Roman", Georgia, Serif;
         }
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
+
+        h1, h2, h3, h4, h5, h6 {
+            font-family: "Playfair Display";
+            letter-spacing: 5px;
         }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 10px 0;
-            text-align: center;
-        }
-        nav {
-            text-align: center;
-            margin-top: 10px;
-        }
-        nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: #333;
-        }
-        footer {
-            text-align: center;
-            padding: 10px 0;
-            background-color: #333;
-            color: white;
+
+        .center-video {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
         }
     </style>
 </head>
 <body>
-<header>
-    <h1>Web Sitesi Başlığı</h1>
-</header>
-<nav>
-    <a href="index.html">Ana Sayfa</a>
-    <a href="about.html">Hakkında</a>
-    <a href="contact.html">İletişim</a>
-</nav>
-<div class="container">
-    <h2>Hoş Geldiniz</h2>
-    <p>Bu bir örnek web sitesidir.</p>
+
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+    <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+        <a href="index.html" class="w3-bar-item w3-button">KNSK</a>
+        <!-- Right-sided navbar links. Hide them on small screens -->
+        <div class="w3-right w3-hide-small">
+            <a href="about.html" class="w3-bar-item w3-button">Hakkında</a>
+            <a href="contact.html" class="w3-bar-item w3-button">İletişim</a>
+        </div>
+    </div>
 </div>
-<footer>
+
+<!-- Video Section -->
+<section class="center-video">
+    <video width="1000" controls>
+        <source src="images/icardi.mov" type="video/mp4">
+        Tarayıcınız video etiketini desteklemiyor.
+    </video>
+</section>
+
+<!-- Page content -->
+<div class="w3-content" style="max-width:1100px">
+
+    <!-- Home Section -->
+    <div class="w3-row w3-padding-64" id="home">
+    </div>
+
+</div>
+
+<!-- Footer -->
+<footer class="w3-center w3-light-grey w3-padding-32">
     <p>&copy; 2024 Web Sitesi. Tüm Hakları Saklıdır.</p>
 </footer>
+
 </body>
 </html>
