--- a/index.html
+++ b/index.html
@@ -1,63 +1,100 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>KNSK</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <style>
-        body {
-            font-family: "Times New Roman", Georgia, Serif;
-        }
-
-        h1, h2, h3, h4, h5, h6 {
-            font-family: "Playfair Display";
-            letter-spacing: 5px;
-        }
-
-        .center-video {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-    </style>
+	<title>We are coming soon</title>
+	<!-- Coming2Live series free coming soon templates! -->
+	<!-- HTML version by Awe7 (http://awe7.com/) -->
+	<!-- You can find WordPress version here: -->
+	<!-- https://wordpress.org/plugins/coming2live/ -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="format-detection" content="telephone=no">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<!-- Fonts-->
+	<link rel="stylesheet" type="text/css" href="assets/fonts/fontawesome/font-awesome.min.css">
+	<!-- Vendors-->
+	<link rel="stylesheet" type="text/css" href="assets/vendors/bootstrap/grid.css">
+	<link rel="stylesheet" type="text/css" href="assets/vendors/YTPlayer/css/jquery.mb.YTPlayer.min.css">
+	<link rel="stylesheet" type="text/css" href="assets/vendors/vegas/vegas.min.css">
+	<!-- App & fonts-->
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Work+Sans:300,400,500,700">
+	<link rel="stylesheet" type="text/css" id="app-stylesheet" href="assets/css/main.css">
+	<!--[if lt IE 9]>
+	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+	<![endif]-->
+	<style>
+		.service-wrapper {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			text-align: center;
+		}
+	</style>
 </head>
+
 <body>
+<div class="page-wrap" id="root">
+	<!-- Content-->
+	<div class="md-content">
 
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-    <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-        <a href="index.html" class="w3-bar-item w3-button">KNSK</a>
-        <!-- Right-sided navbar links. Hide them on small screens -->
-        <div class="w3-right w3-hide-small">
-            <a href="about.html" class="w3-bar-item w3-button">Hakkında</a>
-            <a href="contact.html" class="w3-bar-item w3-button">İletişim</a>
-        </div>
-    </div>
+		<!-- hero -->
+		<div class="hero md-skin-dark" style="background-image:url(https://images.pexels.com/photos/764880/pexels-photo-764880.jpeg?w=1260&amp;h=750&amp;auto=compress&amp;cs=tinysrgb);">
+
+			<!-- header -->
+			<div class="header">
+				<div class="header__left"><span>Istanbul, Turkey</span><span>kaansaka07@gmail.com</span>
+				</div>
+				<div class="header__social">
+					<a class="social-icon social-icon__rounded" href="https://www.instagram.com/kaanssaka?igsh=b3hmejFoaG5hNjV3&utm_source=qr"><i class="fa fa-instagram"></i></a>
+					<!-- End / social-icon -->
+
+					<!-- social-icon -->
+					<a class="social-icon social-icon__rounded" href="https://x.com/kaanska7"><i class="fa fa-twitter"></i></a>
+					<!-- End / social-icon -->
+
+				</div>
+			</div><!-- End / header -->
+
+			<div class="container">
+				<div class="hero__wrapper">
+					<div class="row">
+						<div class="col-lg-10 col-xs-offset-0 col-sm-offset-0 col-md-offset-0 col-lg-offset-1 ">
+							<div class="hero__title_inner"><span class="hero__icon">KNSK</span></div>
+						</div>
+					</div>
+
+					<!-- countdown__module hide undefined -->
+					<div class="countdown__module hide" data-date="2024/9/01">
+						<p><span>%D</span> Days</p>
+						<p><span>%H</span> Hours</p>
+						<p><span>%M</span> Minutes</p>
+						<p><span>%S</span> Seconds</p>
+					</div><!-- End / countdown__module hide undefined -->
+
+					<div class="service-wrapper">
+						<!-- service -->
+						<div class="service">
+							<h2 class="service__title">Web Development</h2>
+							<p class="service__text">Development continues...</p>
+						</div><!-- End / service -->
+					</div>
+				</div>
+			</div>
+		</div><!-- End / hero -->
+
+	</div>
+	<!-- End / Content-->
 </div>
-
-<!-- Video Section -->
-<section class="center-video">
-    <video width="1000" controls>
-        <source src="images/icardi.mov" type="video/mp4">
-        Tarayıcınız video etiketini desteklemiyor.
-    </video>
-</section>
-
-<!-- Page content -->
-<div class="w3-content" style="max-width:1100px">
-
-    <!-- Home Section -->
-    <div class="w3-row w3-padding-64" id="home">
-    </div>
-
-</div>
-
-<!-- Footer -->
-<footer class="w3-center w3-light-grey w3-padding-32">
-    <p>&copy; 2024 Web Sitesi. Tüm Hakları Saklıdır.</p>
-</footer>
-
+<!-- Vendors-->
+<script type="text/javascript" src="assets/vendors/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="assets/vendors/jquery.countdown/jquery.countdown.min.js"></script>
+<script type="text/javascript" src="assets/vendors/flat-surface-shader/fss.min.js"></script>
+<script type="text/javascript" src="assets/vendors/particles.js/particles.js"></script>
+<script type="text/javascript" src="assets/vendors/waterpipe/waterpipe.js"></script>
+<script type="text/javascript" src="assets/vendors/quietflow/quietflow.min.js"></script>
+<script type="text/javascript" src="assets/vendors/YTPlayer/jquery.mb.YTPlayer.min.js"></script>
+<script type="text/javascript" src="assets/vendors/vegas/vegas.min.js"></script>
+<!-- App-->
+<script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
