--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/vendors/vegas/vegas.min.css">
 	<!-- App & fonts-->
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Work+Sans:300,400,500,700">
-	<link rel="stylesheet" type="text/css" id="app-stylesheet" href="assets/css/main.css">
+	<link rel="stylesheet" type="text/css" id="app-stylesheet" href="assets/css/style.css">
 	<!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<![endif]-->
