Add whatsapp number

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
 					<a class="social-icon social-icon__rounded" href="https://x.com/kaanska7"><i class="fa fa-twitter"></i></a>
 					<!-- End / social-icon -->
 
+					<!-- social-icon -->
+					<a class="social-icon social-icon__rounded" href="https://wa.me/905538084215"><i class="fa fa-whatsapp"></i></a>
+					<!-- End / social-icon -->
+
 				</div>
 			</div><!-- End / header -->
 
