Add Media timeline display none

--- a/index.html
+++ b/index.html
@@ -218,6 +218,9 @@
         }
 
         @media (max-width: 600px) {
+            .timeline {
+                display: none;
+            }
             .menu-icon {
                 display: block;
                 float: left;
