Fix pages pathname

--- a/contact.html
+++ b/contact.html
@@ -284,8 +284,8 @@
         }
     </style>
     <script>
-        if (window.location.pathname.endsWith('index.html')) {
-            window.history.replaceState(null, null, 'home');
+        if (window.location.pathname.endsWith('contact.html')) {
+            window.history.replaceState(null, null, 'contact');
         }
 
         function toggleMenu() {
