--- a/programming.html
+++ b/programming.html
@@ -326,8 +326,8 @@
         }
     </style>
     <script>
-        if (window.location.pathname.endsWith('index.html')) {
-            window.history.replaceState(null, null, 'home');
+        if (window.location.pathname.endsWith('programming.html')) {
+            window.history.replaceState(null, null, 'programming');
         }
 
         function toggleMenu() {
