--- a/index.html
+++ b/index.html
@@ -256,6 +256,10 @@
                 width: 100%;
                 text-align: center;
             }
+
+            footer {
+                display: none;
+            }
         }
 
         footer {
