Add new job info

--- a/index.html
+++ b/index.html
@@ -418,9 +418,14 @@
     <div class="timeline-container right">
         <div class="timeline-content">
             <h2>Deneyimler</h2>
+            <div class="experience">IBTECH</div>
+            <div class="role">Fullstack Developer</div>
+            <div class="date">Ocak 2025 - Şu Anda</div>
+            <img src="images/ibtech.png" alt="IBTECH Logo" class="logo">
+            <div class="separator"></div>
             <div class="experience">Inomera</div>
             <div class="role">Fullstack Developer</div>
-            <div class="date">Ağustos 2021 - Şu Anda</div>
+            <div class="date">Ağustos 2021 - Ocak 2025</div>
             <div class="role">Intern</div>
             <div class="date">Haziran 2021 - Ağustos 2021</div>
             <img src="images/inomera-logo.png" alt="Inomera Logo" class="logo">
