--- a/programming.html
+++ b/programming.html
@@ -668,7 +668,7 @@
 
 
 <footer>
-    <p>© 2025 Kaan Saka. Tüm hakları saklıdır.</p>
+    <p>© 2025 Kaan Saka. Tüm Hakları Saklıdır.</p>
 </footer>
 
 <script>
