--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
             <div class="date">Haziran 2021 - Ağustos 2021</div>
             <img src="images/inomera-logo.png" alt="Inomera Logo" class="logo">
             <div class="separator"></div>
-            <div class="experience">Garanti BBVA Teknolojii</div>
+            <div class="experience">Garanti BBVA Teknoloji</div>
             <div class="role">Intern</div>
             <div class="date">Haziran 2019 - Ağustos 2019</div>
             <img src="images/garanti-logo.png" alt="Garanti Logo" class="logo">
