--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
     <div class="timeline-container right">
         <div class="timeline-content">
             <h2>Deneyimler</h2>
-            <div class="experience">IBTECH</div>
+            <div class="experience">IBTECH via Amaris Consulting</div>
             <div class="role">Fullstack Developer</div>
             <div class="date">Ocak 2025 - Şu Anda</div>
             <img src="images/ibtech.png" alt="IBTECH Logo" class="logo">
